Added missing import

--- a/main.ipynb
+++ b/main.ipynb
@@ -17,7 +17,7 @@
       },
       "outputs": [],
       "source": [
-        "from process_data import combine_model_args,add_target_inflations,normalize_and_split_data_chronologically,prepare_inference_data\n",
+        "from process_data import combine_model_args,add_target_inflations,normalize_and_split_data_chronologically,prepare_inference_data, prepare_training_data\n",
         "from load_data import load_avarage_salary,load_building_price,load_inflation,load_unemployed,load_notional_amount\n",
         "from evaluate_model import plot_predicted_inflation, calculate_metrics, print_table\n",
         "from sklearn.neural_network import MLPRegressor"
